--- a/index.html
+++ b/index.html
@@ -10,15 +10,18 @@
 </head>
 
 <body>
-    <h1>extra space</h1>
+    <div class="non-parallax">
+    </div>
+
     <div class="parallax-parent">
         <div class="parallax-child">
             <h2>Parallax</h2>
         </div>
     </div>
 
-    <h1>extra space</h1>
-
+    <div class="back-color">
+        <h1 class="back-color">extra space</h1>
+    </div>
 </body>
 
 </html>
